src/sceditor.scss
/**
 * Default SCEditor
 * http://www.sceditor.com/
 *
 * Copyright (C) 2011-2025, Sam Clarke
 *
 * SCEditor is licensed under the MIT license:
 *	http://www.opensource.org/licenses/mit-license.php
 */
 
.sceditor-container,
.sceditor-container div,
div.sceditor-dropdown,
div.sceditor-dropdown div {
    padding: 0;
    margin: 0;
    z-index: 3;
}

.sceditor-container iframe,
.sceditor-container textarea:not(.textarea-input) {
    display: block;
    flex: 1 1 0%;
    line-height: 1.25;
    border: 0;
    outline: none;
    padding: 0;
    margin: 5px;
    resize: none;
    height: auto !important;
    width: auto !important;
    // Allow iframes to shrink
    min-height: 1px;
}

.sceditor-container textarea:not(.textarea-input) {
    margin: 7px 5px;
}

div.sceditor-dnd-cover {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background: rgba(255,255,255, 0.2);
    border: 5px dashed #aaa;
    z-index: 200;
    font-size: 2em;
    text-align: center;
    color: #aaa;
}

div.sceditor-grip {
    overflow: hidden;
    width: 10px;
    height: 10px;
    cursor: pointer;
    position: absolute;
    bottom: 0;
    right: 0;
    z-index: 3;
    line-height: 0;
}

.sceditor-color-column {
    float: left;
}

.sceditor-color-option {
    display:block;
    width: 18px;
    height: 18px;
    overflow: hidden;
    border: 1px solid rgba(255,255,255, 0.2);
}

.sceditor-color-option:hover {
    border: 2px dotted;
}

.sceditor-button {
    .fa-stack {
        display: inline;
        line-height: inherit;
    }

    .fa-badge {
        position: absolute;
        right: -14px;
        top: 4px;
    }

    .fa-stack-1x {
        top: -4px;
    }
}

.sceditor-button-reply {
     display:none!important
}

.sourceMode textarea:not(.textarea-input) {
        background-color: var(--bs-tertiary-bg);
}

